src/objects/Approvers__mdt.object
<CustomObject>
    <fields>
        <fullName>DefaultLegalRep__c</fullName>
        <label>DefaultLegalRep</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultRevRec__c</fullName>
        <label>DefaultRevRec</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultServicesRVP__c</fullName>
        <label>DefaultServicesRVP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRVPID__c</fullName>
        <label>SalesRVPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRVPName__c</fullName>
        <label>SalesRVPName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Approvers</label>
    <pluralLabel>Approvers</pluralLabel>
</CustomObject>